// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default table cell grid 1`] = `
<div
  className="table rounded"
  role="grid"
/>
`;

exports[`should render a table cell grid with compact padding 1`] = `
<div
  className="table rounded"
  data-table-padding="compact"
  role="grid"
/>
`;

exports[`should render a table cell grid with fill style 1`] = `
<div
  className="table fill rounded"
  role="grid"
/>
`;

exports[`should render a table cell grid with header/footer nodes 1`] = `
<ContentContainer
  className="rounded"
  fill={false}
  footer={
    <p>
      footer
    </p>
  }
  header={
    <p>
      header
    </p>
  }
>
  <div
    className="table"
    role="grid"
  />
</ContentContainer>
`;

exports[`should render a table cell grid with refCallback 1`] = `
<div
  className="table rounded"
  refCallback={[MockFunction]}
  role="grid"
/>
`;

exports[`should render a table cell grid with standard padding 1`] = `
<div
  className="table rounded"
  data-table-padding="standard"
  role="grid"
/>
`;
